# pondr

./: .env.example  .gitignore  README.md  SUCCESS_RECIPES.md  pyproject.toml
data/: preferences.md.example
pondr/: __init__.py  __main__.py  config.py  llm.py  runtime.py
pondr/feeds/: __init__.py  binance.py  binance_aggtrade.py  binance_depth.py  binance_depth_diff.py  coinbase.py  coinbase_depth.py  kraken.py
pondr/kb/: __init__.py  capability_gaps.py  chroma.py  curriculum.py  duckdb.py  knowledge_gaps.py  llm_stats.py  preferences.py  questions.py  sqlite.py  strategies.py
pondr/polls/: __init__.py  coingecko.py  fred.py  news_rss.py
pondr/quant/: __init__.py
pondr/research/: __init__.py  curriculum.py  executor.py  knowledge_map.py  loop.py  planner.py  reflector.py  strategy_synth.py  synthesizer.py  triangulation_ask.py
pondr/server/: dashboard.py  event_bus.py  interrupt.py  ws_server.py
pondr/templates/: dashboard.html
scripts/: chat.py  start.sh  status.sh  stop.sh  translate_pending_questions.py
tests/: conftest.py  test_arb_scanner.py  test_backtest_engine.py  test_capability_gap.py  test_chat_router_answer_with_context.py  test_chat_router_feature_request.py  test_confidence.py  test_curriculum.py  test_dashboard.py  test_dashboard_sse.py  test_feed_aggtrade.py  test_feed_depth_diff.py  test_feeds.py  test_knowledge_map.py  test_loop.py  test_metrics_fixed.py  test_orderbook_book.py  test_orderbook_imbalance.py  test_preferences.py  test_questions.py  test_strategy_design.py  test_strategy_run.py  test_strategy_sandbox.py  test_tools.py
(+40 files in other folders)
