[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pondr"
version = "0.1.0"
description = "Always-on autonomous research bot for quantitative trading"
requires-python = ">=3.11"
dependencies = [
  "httpx[http2]>=0.27",
  "websockets>=12.0",
  "duckduckgo-search>=6.2",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "chromadb>=0.5",
  "aiosqlite>=0.20",
  "duckdb>=1.0",
  "openai>=1.40",
  "pydantic>=2.7",
  "loguru>=0.7",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "feedparser>=6.0",
  "playwright>=1.45",
  "python-dotenv>=1.0",
  "python-telegram-bot>=21.0",
]

[project.scripts]
pondr = "pondr.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pondr*"]
